@@ -1,75 +1,92 @@
 package io.github.booster.config.thread;
 
 import arrow.core.Option;
+import io.github.booster.commons.cache.GenericKeyedObjectCache;
+import io.github.booster.commons.cache.KeyedCacheObjectFactory;
+import io.github.booster.commons.cache.KeyedObjectCache;
 import io.github.booster.commons.metrics.MetricsRegistry;
-import io.github.booster.commons.pool.NamedObjectPool;
 import org.apache.commons.lang3.StringUtils;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.BeansException;
 import org.springframework.cloud.sleuth.instrument.async.LazyTraceThreadPoolTaskExecutor;
 import org.springframework.context.ApplicationContext;
-import org.springframework.context.ApplicationContextAware;
 import org.springframework.scheduling.concurrent.ThreadPoolTaskExecutor;
 
 import javax.annotation.PreDestroy;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 
 /**
  * Spring Configuration for thread groups.
  */
-public class ThreadPoolConfig extends NamedObjectPool<ExecutorService> implements ApplicationContextAware {
+public class ThreadPoolConfig
+        implements KeyedCacheObjectFactory<String, ExecutorService>,
+        KeyedObjectCache<String, ExecutorService> {
 
     private static final Logger log = LoggerFactory.getLogger(ThreadPoolConfig.class);
 
     private Map<String, ThreadPoolSetting> settings = new HashMap<>();
 
-    private MetricsRegistry registry;
+    private KeyedObjectCache<String, ExecutorService> cache;
 
-    private ApplicationContext applicationContext;
+    private final MetricsRegistry registry;
+
+    private final ApplicationContext applicationContext;
+
+    public ThreadPoolConfig(
+            ApplicationContext applicationContext,
+            MetricsRegistry registry
+    ) {
+        this.applicationContext = applicationContext;
+        this.registry = registry;
+        this.cache = new GenericKeyedObjectCache<>(this);
+    }
 
     /**
      * Creates default thread pools upon start up.
      * @param settings thread pool settings.
      */
     public void setSettings(Map<String, ThreadPoolSetting> settings) {
-        this.settings = settings == null ? Collections.emptyMap() : settings;
+        this.settings = settings == null ? Map.of() : settings;
     }
 
     /**
      * Retrieves original setting.
-     * @param name name of the setting.
+     * @param key name of the setting.
      * @return {@link ThreadPoolSetting} if exists, otherwise null.
      */
-    public ThreadPoolSetting getSetting(String name) {
-        if (name != null) {
-            return this.settings.get(name);
+    public ThreadPoolSetting getSetting(String key) {
+        if (key != null) {
+            return this.settings.get(key);
         }
         return null;
     }
 
     @PreDestroy
     public void destroy() {
-        this.getKeys()
-                .forEach(key -> this.get(key).shutdown());
+        this.cache.getKeys()
+                .forEach(key -> {
+                    ExecutorService threadPool = this.cache.get(key);
+                    if (threadPool != null) {
+                        threadPool.shutdown();
+                    }
+                });
     }
 
-    public void setMetricsRegistry(MetricsRegistry registry) {
-        this.registry = registry;
-    }
-
+    @Nullable
     @Override
-    protected ExecutorService createObject(String name) {
-        if (this.settings.containsKey(name)) {
-            ThreadPoolSetting setting = this.settings.get(name);
+    public ExecutorService create(String key) {
+        if (this.settings.containsKey(key)) {
+            ThreadPoolSetting setting = this.settings.get(key);
             ThreadPoolTaskExecutor executor = new ThreadPoolTaskExecutor();
-            log.debug("booster-starter - creating thread pool for [{}], setting: [{}]", name, setting);
+            log.debug("booster-starter - creating thread pool for [{}], setting: [{}]", key, setting);
 
-            if (StringUtils.isBlank(setting.getPrefix())) {
-                setting.setPrefix(name);
+            if (StringUtils.isNotBlank(setting.getPrefix())) {
+                setting.setPrefix(key);
             }
             if (setting.getCoreSize() > setting.getMaxSize()) {
                 setting.setCoreSize(setting.getMaxSize());
@@ -89,25 +106,41 @@ public class ThreadPoolConfig extends NamedObjectPool<ExecutorService> implement
                 executorService = taskExecutor.getThreadPoolExecutor();
                 if (this.registry != null) {
                     Option<ExecutorService> executorServiceOption =
-                            this.registry.measureExecutorService(Option.fromNullable(executorService), name);
+                            this.registry.measureExecutorService(Option.fromNullable(executorService), key);
                     return executorServiceOption.orNull();
                 }
             } else {
                 executorService = executor.getThreadPoolExecutor();
                 if (this.registry != null) {
                     Option<ExecutorService> executorServiceOption =
-                            this.registry.measureExecutorService(Option.fromNullable(executorService), name);
+                            this.registry.measureExecutorService(Option.fromNullable(executorService), key);
                     return executorServiceOption.orNull();
                 }
             }
             return executorService;
         }
-        log.debug("booster-starter - no thread pool setup for [{}]", name);
+        log.debug("booster-starter - no thread pool setup for [{}]", key);
         return null;
     }
 
+    @NotNull
     @Override
-    public void setApplicationContext(ApplicationContext applicationContext) throws BeansException {
-        this.applicationContext = applicationContext;
+    public Set<String> getKeys() {
+        return this.cache.getKeys();
+    }
+
+    @Nullable
+    @Override
+    public ExecutorService get(String key) {
+        if (key != null) {
+            return this.cache.get(key);
+        }
+        return null;
+    }
+
+    @NotNull
+    @Override
+    public Option<ExecutorService> tryGet(String key) {
+        return this.cache.tryGet(key);
     }
 }
